# wilkins-api-test

./: .env.sample  .gitignore  BeyondGen.pem  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  sd.sh
.github/workflows/: deploy.yml
src/alembic/: env.py
src/alembic/versions/: 2023-11-07_initial_model.py  2023-11-13_added_users_table.py  2023-11-15_change_status_column_type_to_enum.py  2023-11-29_updated_overall_schema.py  2023-12-13_added_selected_column.py  2023-12-18_added_size_raw_date_column.py  2023-12-21_added_image_id_unit_id_on_of_periods_in_.py  2023-12-21_added_unit_column_in_submission.py  2023-12-26_added_cost_basis_col_in_submission.py  2024-01-01_deleted_weeks_in_period_column.py  2024-01-03_is_prod_force_nullable__and_size_255.py
src/apiserver/: main.py  models.py  schemas.py
src/apiserver/core/: security.py  utils.py
src/apiserver/db/: base.py  base_class.py
src/apiserver/routes/: auth_route.py  project_route.py
src/apiserver/scripts/: generate_api_key.py  generate_cli_user_token.py
src/apiserver/service/: api_crud.py  base_crud.py
